Add getting subscription plans to api client
